cmake_minimum_required(VERSION 3.12)
project(iTunesDiscord)
include_directories(discord-rpc/include/)
link_directories(discord-rpc/lib/)
add_executable(iTunesDiscord main.mm)
find_library(ITUNES_LIBRARY iTunesLibrary)
find_library(FOUNDATION Foundation)
find_library(CORE_SERVICES CoreServices)
target_link_libraries(iTunesDiscord discord-rpc)
target_link_libraries(iTunesDiscord ${ITUNES_LIBRARY})
target_link_libraries(iTunesDiscord ${FOUNDATION})
target_link_libraries(iTunesDiscord ${CORE_SERVICES})
