cmake_minimum_required(VERSION 3.12)
project(iTunesDiscord)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -O0 -D DEBUG -Wal")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -D NDEBUG -Wall")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -O3 -D DEBUG")
set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_RELEASE} -O3 -D NDEBUG")
include_directories(discord-rpc/include/)
link_directories(discord-rpc/lib/)
add_executable(iTunesDiscord main.mm)
find_library(SCRIPTING_BRIDGE ScriptingBridge)
find_library(APP_KIT AppKit)
find_library(CORE_SERVICES CoreServices)
target_link_libraries(iTunesDiscord discord-rpc)
target_link_libraries(iTunesDiscord ${SCRIPTING_BRIDGE})
target_link_libraries(iTunesDiscord ${APP_KIT})
target_link_libraries(iTunesDiscord ${CORE_SERVICES})
set(CMAKE_EXE_LINKER_FLAGS "-sectcreate __TEXT __info_plist ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist")
